# time-series

./: .travis.yml  README.markdown  time-series.cabal
src/Data/: Series.hs
src/Data/Series/: Literal.hs
src/Data/Time/: Series.hs
src/Data/Time/Series/: Literal.hs  Model.hs  Periodicity.hs
